fixed alignment issues on archive pages

--- a/style.less
+++ b/style.less
@@ -1085,7 +1085,7 @@ iframe.twitter-timeline {
         margin-right: 0.9em;
         width: @4cols;
     }
-    body.archive article:nth-of-type(2n) {
+    body.archive article:nth-of-type(3n) {
         margin-right: 0;
     }
     .case-attributes, .entry-content > aside {
@@ -1121,7 +1121,7 @@ iframe.twitter-timeline {
         width: @8cols;
     }
     body.archive article,
-    body.archive article:nth-of-type(2n) {
+    body.archive article:nth-of-type(3n) {
         margin-right: 0.9em;
         width: @4cols;
     }
